--- a/project/templates/cars/add_car.html
+++ b/project/templates/cars/add_car.html
@@ -1,20 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Car</title>
-    <link rel="stylesheet" href="{% static 'css/add_car.css' %}">
-</head>
-<body>
-    <h1>Add new Car</h1>
-    <form method="post">
-         {% csrf_token %}
-         {{ form.as_p }} 
-         <button type="submit"> Add Car </button>
-    </form>
-
-    <a href="{% url 'car_list' %}">back to list page</a>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<link rel="stylesheet" href="/static/css/add_car.css">
+<h1>Add new Car</h1>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <label for="photos">Photos:</label>
+    <input type="file" name="photos" id="photos" multiple>
+    <button type="submit">Add car</button>
+</form>
+<a href="{% url 'cars:home' %}">back to list page</a>
+{% endblock %}
