--- a/project/templates/registration/login.html
+++ b/project/templates/registration/login.html
@@ -1,21 +1,18 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
-</head>
-<body>
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">submit</button>
-    </form>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<link rel="stylesheet" href="/static/css/profile.css">
+<h2>Login</h2>
+<form method="post">
+    {% csrf_token %}
+    <input type="text" name="phone" placeholder="Phone number">
+    <input type="password" name="password" placeholder="Password">
+    <button type="submit">Login</button>
+    {% if error %}
+        <p style="color:red">{{ error }}</p>
+    {% endif %}
+</form>
+{% endblock %}
+    <button type="submit">Login</button>
 
+    {% if error %}
 
