--- a/project/templates/registration/register.html
+++ b/project/templates/registration/register.html
@@ -1,20 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
-</head>
-<body>
-    <h1>CREATE ACCOUNT</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Register</button>
-    </form>
-    <p>Have an account <a href="{% url 'login' %'}">login</a>.</p>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<link rel="stylesheet" href="/static/css/register.css">
+<h1>CREATE ACCOUNT</h1>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ user_form.as_p }}
+    {{ profile_form.as_p }}
+    <button type="submit">Register</button>
+</form>
+<p>Have an account? <a href="{% url 'users:login' %}">Login</a>.</p>
+{% endblock %}
