--- a/project/templates/cars/car_list.html
+++ b/project/templates/cars/car_list.html
@@ -10,7 +10,7 @@
     <input type="number" name="year_max" placeholder="Year to" value="{{ request.GET.year_max }}">
     <input type="number" name="capacity" placeholder="Capacity" value="{{ request.GET.capacity }}">
     <button type="submit">Filter</button>
-    <a href="{% url 'cars:home' %}">Reset</a>
+    <a href="{% url 'cars:home' %}" class="filter-reset">Reset</a>
 </form>
 <br>
 
@@ -18,6 +18,13 @@
 <ul class="car-list">
     {% for car in cars %}
         <li class="car-item">
+            <div class="car-photo-list">
+                {% if car.photos.first %}
+                    <img src="{{ car.photos.first.image.url }}" width="120" alt="Car photo">
+                {% else %}
+                    <img src="/static/car_pics/default_car.jpg" width="120" alt="Default car photo">
+                {% endif %}
+            </div>
             <a href="{% url 'cars:car_detail' car.pk %}">{{ car.brand }} {{ car.model }} ({{ car.year }})</a>
             - {{ car.price_per_day }}₾
             {% if car.available %}
