--- a/project/templates/message/contact.html
+++ b/project/templates/message/contact.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/contact.css' %}">
+{% endblock %}
 {% block content %}
-<link rel="stylesheet" href="/static/css/contact.css">
-<h2>contact page</h2>
+<h1 style="color: black;" >contact page</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
