--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -60,6 +60,7 @@
         <div class="sidebar-container" id="sidebar-container" style="display:block;">
             <div class="sidebar sidebar-page" id="sidebar">
                 <a href="{% url 'cars:home' %}" class="sidebar-btn">Home</a>
+                <a href="{% url 'cars:add_car' %}" class="sidebar-btn">Add Car</a>
                 <a href="{% url 'users:login' %}" class="sidebar-btn">Login</a>
                 <a href="{% url 'users:profile' %}" class="sidebar-btn">Profile</a>
                 <a href="{% url 'users:register' %}" class="sidebar-btn">Register</a>
